07-02-14:
* Updated to the latest git version cae2da3
17-01-14:
* Fixed folder browser 'up' button when on the default folder
* Set preferences to %APPDATA\FontForge for the installed
  version, otherwise share\fontforge\preferences for the
  portable version.
* Made an installer version using InnoSetup